Claiming algorithm working now! <3 finally